# colorfulcanvas

./: .gitignore  README.md  dev-docker-compose.yml  dev.dockerfile  docker-compose.yml  dockerfile  init-mongo.js  rebuild.sh
client/: tsconfig.json
client/assets/: toad.json  translations.json
client/old/: colorful-canvas.js  home.js
client/sites/: about.html  artworks.js  artworks.js.map  canvas.js  canvas.js.map  colorful-canvas.css  colorful-canvas.html  colorful-canvas.js  colorful-canvas.js.map  cookies.js  cookies.js.map  dashboard.html  home.css  home.html  home.js  home.js.map  nav.css  translate.js  translate.js.map  translations.json
client/src/: artworks.ts  canvas.ts  colorful-canvas.ts  cookies.ts  home.ts  translate.ts  translations.json
server/: Cargo.toml  dev-docker-compose.yml  docker-compose.yml  main.rs
server/rust-server/: Cargo.toml  dockerfile
website/: colourful-canvas.css  colourful-canvas.html  colourful-canvas.js  home.css  home.html  home.js  nav.css
website/assets/: tree.json
